--- a/glide.yaml
+++ b/glide.yaml
@@ -1,5 +1,9 @@
 package: nobody/go-study
 import:
-- package: gopkg.in/gin-gonic/gin.v1
 - package: github.com/jinzhu/gorm
   version: ^1.0.0
+  subpackages:
+  - dialects/mysql
+- package: github.com/skip2/go-qrcode
+- package: gopkg.in/gin-gonic/gin.v1
+  version: ^1.1.4
