--- a/glide.yaml
+++ b/glide.yaml
@@ -7,3 +7,5 @@ import:
 - package: github.com/skip2/go-qrcode
 - package: gopkg.in/gin-gonic/gin.v1
   version: ^1.1.4
+- package: github.com/go-bongo/bongo
+  version: ^0.10.4
